Updating storybook main page

--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -7,8 +7,9 @@ import Flow from './assets/flow.svg';
 import Plugin from './assets/plugin.svg';
 import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
+import Planet from './assets/planet-outline.svg';
 
-<Meta title="Example/Introduction" />
+<Meta title="Pluto/Introduction" />
 
 <style>
   {`
@@ -116,14 +117,30 @@ import StackAlt from './assets/stackalt.svg';
   `}
 </style>
 
-# Welcome to Storybook
+# Welcome to Pluto <img src={Planet} width="24px" height="24px" alt="planet" />
 
-Storybook helps you build UI components in isolation from your app's business logic, data, and context.
-That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
+This is Pluto - a web component library fully written in **Svelte**.
 
-Browse example stories now by navigating to them in the sidebar.
-View their code in the `stories` directory to learn how they work.
-We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
+To easily browse the components I used Storybook. Storybook allows you to view the different components and directly see their different states and how you can customise them.
+
+<div className="subheading">Components</div>
+The following components are currently implemented and you can see each of them in the menu on the left.
+- Badge
+- Button
+- CheckBox
+- Input
+- ProgressBar
+
+<div className="subheading">WIP</div>
+This is a list of **W**ork **I**n **P**rogress components that are on the list to be added in the future:
+- Alert / Notification
+- Avatar
+- Card
+- Details
+- Radio Button
+- Rating
+- Sidebar
+
 
 <div className="subheading">Configure</div>
 
