Update main page

--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -130,6 +130,7 @@ The following components are currently implemented and you can see each of them 
 - CheckBox
 - Input
 - ProgressBar
+- RadioButton
 
 <div className="subheading">WIP</div>
 This is a list of **W**ork **I**n **P**rogress components that are on the list to be added in the future:
@@ -137,9 +138,9 @@ This is a list of **W**ork **I**n **P**rogress components that are on the list t
 - Avatar
 - Card
 - Details
-- Radio Button
 - Rating
 - Sidebar
+- Switch
 
 
 <div className="subheading">Configure</div>
